<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Type of activity type field -->
            <EditText
                android:id="@+id/edit_activity_type"
                android:hint="@string/hint_activity_type"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

        </LinearLayout>
    </LinearLayout>

    <!-- Day of the week category -->
    <LinearLayout
        android:id="@+id/container_day_of_week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_day_of_week"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Day of the week drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_day_of_week"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Time category -->
    <LinearLayout
        android:id="@+id/container_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_amount_of_time"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Amount of time field -->
            <EditText
                android:id="@+id/edit_amount_of_time"
                android:hint="@string/hint_amount_of_time"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <!-- Units for minutes -->
            <TextView
                android:id="@+id/label_weight_units"
                android:text="@string/unit_minutes"
                style="@style/EditorUnitsStyle"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>